--- a/index.html
+++ b/index.html
@@ -18,23 +18,20 @@
         <button id="themeBtn" class="icon-btn" aria-label="Theme"><i data-lucide="sun"></i></button>
         <button id="langBtn" class="icon-btn" aria-label="Language">RU</button>
 
-        <!-- Корзина с бейджем сверху -->
         <a class="icon-btn cart-btn" href="#/cart" aria-label="Cart">
           <i data-lucide="shopping-bag"></i>
           <span id="cartCount" class="badge">0</span>
         </a>
 
-        <!-- мобильное меню справа -->
         <button id="menuBtn" class="icon-btn" aria-label="Menu"><i data-lucide="menu"></i></button>
       </div>
     </header>
 
-    <!-- drawer выезжает справа -->
     <aside id="drawer" class="drawer" aria-hidden="true">
       <button id="closeDrawer" class="icon-btn close"><i data-lucide="x"></i></button>
       <nav id="drawerNav"></nav>
 
-      <!-- Нижний док с иконками соцсетей (как на референсе) -->
+      <!-- Нижний док с соц-иконками -->
       <div class="drawer-dock">
         <a class="dock-btn" href="https://t.me/evliseoutlet" target="_blank" aria-label="Telegram">
           <i data-lucide="send"></i>
@@ -42,13 +39,11 @@
         <a class="dock-btn" href="https://www.instagram.com/evliseoutlet/" target="_blank" aria-label="Instagram">
           <i data-lucide="instagram"></i>
         </a>
-        <!-- VK -->
         <a class="dock-btn" href="https://vk.com/" target="_blank" aria-label="VK">
           <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" aria-hidden="true">
             <path d="M12.9 17c-4.7 0-7.4-3.2-7.6-8.6h2.5c.1 4 1.8 5.7 3 5.9V8.4h2.4v3.4c1.2-.1 2.4-1.5 2.8-3.4h2.3c-.3 1.9-1.6 3.3-2.6 3.9 1 .5 2.2 1.7 2.7 3.7h-2.6c-.4-1.5-1.4-2.4-2.6-2.6V17h-2.3v-3.6c-1.3-.2-2.8-1.3-3.4-3.6h-.1c.5 3.1 2.4 4.6 4.1 4.8V17z"/>
           </svg>
         </a>
-        <!-- Pinterest -->
         <a class="dock-btn" href="https://www.pinterest.com/" target="_blank" aria-label="Pinterest">
           <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" aria-hidden="true">
             <path d="M12.1 2C7.6 2 5 5 5 8.4c0 2.5 1.4 3.9 2.3 3.9.4 0 .7-1 .7-1.3 0-.3-.7-.9-.7-2.1 0-2.4 1.8-4.1 4.2-4.1 2 0 3.4 1.1 3.4 3.2 0 1.5-.6 4.3-2.6 4.3-.7 0-1.3-.5-1.3-1.2 0-1 .7-2.5.7-3.8 0-.9-1.3-1-1.9-.4-.8.8-1.2 2.3-1.2 3.5 0 1.5.5 2.8 1.8 3 .3.1.6.1.9.1 2.9 0 4.9-2.7 4.9-6 0-2.6-2.2-4.9-5.2-4.9zM9.5 21c-.3 1-1 2.6-1.3 3.5-.1.3-.3.4-.5.3-.5-.2-.7-.8-.5-1.6l1.7-7.1c.2-.9 0-2.1-.1-2.9-.1-.4.1-.5.3-.2.7.8 1.4 2 1.4 3.6 0 2.7-1.5 4.7-1 4.4z"/>
@@ -61,12 +56,12 @@
     <main id="view" class="view"></main>
   </div>
 
-  <!-- Плавающая кнопка поддержки -->
+  <!-- Плавающая поддержка -->
   <a href="https://t.me/evliseoutlet" target="_blank" class="fab-support" aria-label="Support">
     <i data-lucide="message-circle"></i>
   </a>
 
-  <!-- Модалка -->
+  <!-- Модалка / полноэкранный просмотр фото -->
   <div id="modal" class="modal" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-head">
