--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <i data-lucide="message-circle"></i>
   </a>
 
-  <!-- Модалка / полноэкранный просмотр фото -->
+  <!-- Модалка / полноэкранный просмотр фото / онбординг -->
   <div id="modal" class="modal" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-head">
