--- a/index.html
+++ b/index.html
@@ -1,82 +1,96 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>Evlise Outlet — каталог</title>
-  <meta name="description" content="Каталог одежды Evlise Outlet. Категории, фильтры, размеры, корзина. Заказ через Telegram." />
-  <link rel="icon" href="assets/favicon.png">
-  <link rel="stylesheet" href="styles.css" />
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
-</head>
-<body>
-  <div id="app">
-    <!-- Top bar как в референсе -->
-    <header class="header" id="appHeader">
-      <button id="backBtn" class="icon-btn" aria-label="Back" style="display:none"><i data-lucide="chevron-left"></i></button>
-      <a class="brand" href="#/">Evlise</a>
-      <div class="header-actions">
-        <button id="themeBtn" class="icon-btn" aria-label="Theme"><i data-lucide="sun"></i></button>
-        <button id="langBtn" class="icon-btn" aria-label="Language">RU</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+    <title>Nasledstvo — магазин</title>
+    <meta name="theme-color" content="#121111" />
+    <link rel="icon" href="assets/favicon.png" />
+    <!-- Encode (как в референсе) -->
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css" />
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+  </head>
+  <body>
+    <div id="app">
+      <header class="app-header">
+        <div class="h-welcome">
+          <div class="hello">Привет, добро пожаловать 👋</div>
+          <div class="name" id="userName">Гость</div>
+        </div>
+        <button id="tgAuthBtn" class="pill primary small"><i data-lucide="send"></i><span>Войти через Telegram</span></button>
+      </header>
+
+      <!-- Поиск и фильтр как в референсах -->
+      <section class="section section-search">
+        <div class="search-wrap">
+          <i data-lucide="search" class="search-ico"></i>
+          <input id="searchInput" class="search" placeholder="Поиск одежды…" />
+        </div>
+        <button id="openFilters" class="square-btn"><i data-lucide="sliders-horizontal"></i></button>
+      </section>
+
+      <!-- Категории чипами -->
+      <section class="section">
+        <div class="chipbar" id="catChips"></div>
+      </section>
+
+      <!-- Сетка карточек -->
+      <main id="view" class="view"></main>
+
+      <!-- модалка/тосты -->
+      <div id="modal" class="modal" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-head">
+            <div id="modalTitle"></div>
+            <button id="modalClose" class="icon-btn"><i data-lucide="x"></i></button>
+          </div>
+          <div id="modalBody" class="modal-body"></div>
+          <div id="modalActions" class="modal-actions"></div>
+        </div>
       </div>
-    </header>
+      <div id="toastWrap" class="toast-wrap"></div>
 
-    <!-- Drawer (меню) -->
-    <aside id="drawer" class="drawer" aria-hidden="true">
-      <button id="closeDrawer" class="icon-btn close"><i data-lucide="x"></i></button>
-      <nav id="drawerNav"></nav>
-      <div class="drawer-dock">
-        <a class="dock-btn" href="https://t.me/evliseoutlet" target="_blank" aria-label="Telegram" rel="noopener"><i data-lucide="send"></i></a>
-        <a class="dock-btn" href="https://www.instagram.com/evliseoutlet/" target="_blank" aria-label="Instagram" rel="noopener"><i data-lucide="instagram"></i></a>
-        <a class="dock-btn" href="https://vk.com/" target="_blank" aria-label="VK" rel="noopener"><svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M12.9 17c-4.7 0-7.4-3.2-7.6-8.6h2.5c.1 4 1.8 5.7 3 5.9V8.4h2.4v3.4c1.2-.1 2.4-1.5 2.8-3.4h2.3c-.3 1.9-1.6 3.3-2.6 3.9 1 .5 2.2 1.7 2.7 3.7h-2.6c-.4-1.5-1.4-2.4-2.6-2.6V17h-2.3v-3.6c-1.3-.2-2.8-1.3-3.4-3.6h-.1c.5 3.1 2.4 4.6 4.1 4.8V17z"/></svg></a>
-      </div>
-    </aside>
-    <div id="overlay" class="overlay" aria-hidden="true"></div>
-
-    <!-- Контент -->
-    <main id="view" class="view"></main>
-
-    <!-- Нижний таббар как в референсе -->
-    <nav id="tabbar" class="tabbar">
-      <a data-tab="home" href="#/" class="tab active"><i data-lucide="home"></i><span>Home</span></a>
-      <a data-tab="search" href="#/search" class="tab"><i data-lucide="search"></i><span>Search</span></a>
-      <a data-tab="saved" href="#/favorites" class="tab"><i data-lucide="heart"></i><span>Saved</span></a>
-      <a data-tab="cart" href="#/cart" class="tab badge-wrap"><i data-lucide="shopping-bag"></i><span>Cart</span><em id="tabCartCount" class="badge">0</em></a>
-      <a data-tab="account" href="#/account" class="tab"><i data-lucide="user-2"></i><span>Account</span></a>
-    </nav>
-  </div>
-
-  <!-- FAB Support -->
-  <a href="https://t.me/evliseoutlet" target="_blank" class="fab-support" aria-label="Support" rel="noopener"><i data-lucide="message-circle"></i></a>
-
-  <!-- Modal -->
-  <div id="modal" class="modal" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-head">
-        <div id="modalTitle"></div>
-        <button id="modalClose" class="icon-btn"><i data-lucide="x"></i></button>
-      </div>
-      <div id="modalBody" class="modal-body"></div>
-      <div id="modalActions" class="modal-actions"></div>
+      <!-- Нижний таббар (как на референсе) -->
+      <nav class="tabbar">
+        <a href="#/" data-tab="home" class="tab active">
+          <i data-lucide="home"></i><span>Главная</span><b class="dot"></b>
+        </a>
+        <a href="#/search" data-tab="search" class="tab">
+          <i data-lucide="search"></i><span>Поиск</span><b class="dot"></b>
+        </a>
+        <a href="#/favorites" data-tab="saved" class="tab">
+          <i data-lucide="heart"></i><span>Избранное</span><b class="dot"></b>
+        </a>
+        <a href="#/cart" data-tab="cart" class="tab badge-wrap">
+          <i data-lucide="shopping-bag"></i><span>Корзина</span><b id="cartBadge" class="badge">0</b><b class="dot"></b>
+        </a>
+        <a href="#/account" data-tab="account" class="tab">
+          <i data-lucide="user-round"></i><span>Аккаунт</span><b class="dot"></b>
+        </a>
+      </nav>
     </div>
-  </div>
 
-  <div id="toastWrap" class="toast-wrap"></div>
+    <!-- Шаблоны -->
+    <template id="product-card">
+      <a class="card" href="#">
+        <div class="card-img">
+          <img loading="lazy" alt="">
+          <button class="fav"><i data-lucide="heart"></i></button>
+        </div>
+        <div class="card-body">
+          <div class="title"></div>
+          <div class="subtitle"></div>
+          <div class="price-row">
+            <div class="price"></div>
+            <div class="rating"><i data-lucide="star"></i><span>5.0</span></div>
+          </div>
+        </div>
+      </a>
+    </template>
 
-  <!-- Тemplating -->
-  <template id="product-card">
-    <a class="card" href="#">
-      <div class="card-img-wrap"><img loading="lazy" alt=""></div>
-      <div class="card-body">
-        <div class="card-title"></div>
-        <div class="card-price"></div>
-      </div>
-    </a>
-  </template>
-  <template id="filter-chip"><button class="chip" data-key="" data-value=""></button></template>
-
-  <script type="module" src="src/main.js"></script>
-  <script>window.lucide && lucide.createIcons();</script>
-</body>
+    <script type="module" src="src/main.js"></script>
+    <script>window.lucide && lucide.createIcons();</script>
+  </body>
 </html>
