--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
     <title>Nasledstvo — магазин</title>
     <meta name="theme-color" content="#121111" />
     <link rel="icon" href="assets/favicon.png" />
@@ -16,7 +13,7 @@
   </head>
   <body>
     <div id="app">
-      <header class="app-header">
+      <header class="app-header" role="banner">
         <div class="h-welcome">
           <div class="hello">Привет, добро пожаловать 👋</div>
           <div class="name" id="userName">Гость</div>
@@ -37,7 +34,7 @@
 
       <!-- Категории -->
       <section class="section">
-        <div class="chipbar" id="catChips"></div>
+        <div class="chipbar" id="catChips" aria-label="Категории"></div>
       </section>
 
       <!-- Активные фильтры -->
@@ -48,7 +45,7 @@
 
       <!-- Модалка -->
       <div id="modal" class="modal" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog" role="dialog" aria-modal="true">
           <div class="modal-head">
             <div id="modalTitle"></div>
             <button id="modalClose" class="icon-btn" aria-label="Закрыть"><i data-lucide="x"></i></button>
@@ -63,9 +60,6 @@
       <nav class="tabbar" role="tablist" aria-label="Основная навигация">
         <a href="#/" data-tab="home" class="tab active" role="tab" aria-selected="true">
           <i data-lucide="home"></i><span>Главная</span><b class="dot"></b>
-        </a>
-        <a href="#/search" data-tab="search" class="tab" role="tab" aria-selected="false">
-          <i data-lucide="search"></i><span>Поиск</span><b class="dot"></b>
         </a>
         <a href="#/favorites" data-tab="saved" class="tab" role="tab" aria-selected="false">
           <i data-lucide="heart"></i><span>Избранное</span><b class="dot"></b>
@@ -93,7 +87,6 @@
           <div class="subtitle"></div>
           <div class="price-row">
             <div class="price"></div>
-            <div class="rating"><i data-lucide="star"></i><span>5.0</span></div>
           </div>
         </div>
       </a>
