--- a/index.html
+++ b/index.html
@@ -14,24 +14,25 @@
   <body>
     <div id="app">
 <header class="app-header" role="banner">
-  <div class="brand">
-    <span class="app-title" aria-label="EVLISE OUTLET">EVLISE OUTLET</span>
+  <!-- ЛЕВО: back + бренд -->
+  <div class="hdr-left">
+    <button id="hdrBack" class="hdr-circ" aria-label="Назад"><i data-lucide="chevron-left"></i></button>
+    <div class="brand">
+      <span class="app-title" aria-label="EVLISE OUTLET">EVLISE OUTLET</span>
+    </div>
   </div>
 
+  <!-- ПРАВО: уведомления + избранное -->
   <div class="hdr-right">
     <button id="openNotifications" class="icon-btn notif-btn" aria-label="Уведомления">
       <i data-lucide="bell"></i>
       <b id="notifBadge" class="badge" hidden>0</b>
     </button>
-
-    <!-- продуктовые контролы: появятся при скролле на карточке -->
-    <div id="prdHeaderCtrls" class="prd-ctrls" aria-hidden="true">
-      <button id="hdrBack" class="hdr-circ" aria-label="Назад"><i data-lucide="chevron-left"></i></button>
-      <button id="hdrFav"  class="hdr-circ" aria-label="В избранное" aria-pressed="false"><i data-lucide="heart"></i></button>
-    </div>
+    <button id="hdrFav" class="hdr-circ" aria-label="В избранное" aria-pressed="false">
+      <i data-lucide="heart"></i>
+    </button>
   </div>
 </header>
-
 
       <!-- Поиск + фильтры -->
       <section class="section section-search">
@@ -77,7 +78,6 @@
     </a>
     <a href="#/cart" data-tab="cart" class="tab badge-wrap" role="tab" aria-selected="false">
       <i data-lucide="shopping-bag"></i><span>Корзина</span>
-      <!-- изначально пусто и скрыто -->
       <b id="cartBadge" class="badge" hidden></b>
     </a>
     <a href="#/account" data-tab="account" class="tab" role="tab" aria-selected="false">
