--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
   </head>
   <body>
     <div id="app">
-
-      <!-- ХЕДЕР: бренд слева, уведомления справа.
-           Круглые #hdrBack / #hdrFav подставляются скриптом и показываются только на карточке товара -->
+      <!-- ШАПКА: бренд слева, уведомления справа.
+           Круглые #hdrBack / #hdrFav добавляются скриптом и показываются только на странице товара -->
       <header class="app-header" role="banner">
         <div class="hdr-left">
-          <!-- сюда скрипт при необходимости вставит #hdrBack -->
+          <!-- сюда при необходимости вставится #hdrBack -->
           <div class="brand">
             <span class="app-title" aria-label="EVLISE OUTLET">EVLISE OUTLET</span>
           </div>
@@ -28,7 +27,7 @@
             <i data-lucide="bell"></i>
             <b id="notifBadge" class="badge" hidden>0</b>
           </button>
-          <!-- сюда скрипт при необходимости вставит #hdrFav -->
+          <!-- сюда при необходимости вставится #hdrFav -->
         </div>
       </header>
 
