--- a/index.html
+++ b/index.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-    <title>Nasledstvo — магазин</title>
-    <meta name="theme-color" content="#121111" />
-    <link rel="icon" href="assets/favicon.png" />
-    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css" />
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+
+  <title>EVLISE OUTLET — интернет-магазин одежды</title>
+  <meta name="description" content="EVLISE OUTLET — стильная женская и мужская одежда со скидками. Новинки, акции и быстрый заказ прямо в Telegram WebApp." />
+  <meta name="keywords" content="Evlise Outlet, одежда, магазин, распродажа, скидки, платье, куртка, худи, штаны, аксессуары" />
+  <meta name="theme-color" content="#121111" />
+  <meta name="application-name" content="EVLISE OUTLET" />
+  <meta name="apple-mobile-web-app-title" content="EVLISE OUTLET" />
+  <meta name="format-detection" content="telephone=no" />
+
+  <!-- Favicon / icons -->
+  <link rel="icon" type="image/png" href="assets/favicon.png" />
+  <!-- Если есть — добавьте свою картинку 180x180 -->
+  <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="EVLISE OUTLET" />
+  <meta property="og:title" content="EVLISE OUTLET — интернет-магазин одежды" />
+  <meta property="og:description" content="Стильные вещи по Outlet-ценам. Смотрите каталог и заказывайте в пару кликов." />
+  <meta property="og:locale" content="ru_RU" />
+  <!-- Замените путь, если ваш баннер в другом месте/с другим именем -->
+  <meta property="og:image" content="assets/images/og-evlise.png" />
+  <meta property="og:image:alt" content="EVLISE OUTLET — баннер магазина" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="EVLISE OUTLET — интернет-магазин одежды" />
+  <meta name="twitter:description" content="Стильные вещи по Outlet-ценам. Смотрите каталог и заказывайте в пару кликов." />
+  <meta name="twitter:image" content="assets/images/og-evlise.png" />
+
+  <!-- Fonts / styles / libs -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@400;600;700;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
+
+  <!-- Telegram WebApp + иконки -->
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+</head>
+
   <body>
     <div id="app">
       <!-- Статичный хедер (всегда существует) -->
